@@ -10,6 +10,7 @@ lib/WWW/Search/Ebay.pm
 lib/WWW/Search/Ebay/Auctions.pm
 lib/WWW/Search/Ebay/BuyItNow.pm
 lib/WWW/Search/Ebay/ByEndDate.pm
+lib/WWW/Search/Ebay/Motors.pm
 lib/WWW/Search/Ebay/Stores.pm
 Makefile.PL
 MANIFEST			This list of files
@@ -17,4 +18,5 @@ README
 t/basic.t
 t/buyitnow.t
 t/enddate.t
+t/motors.t
 t/stores.t
